<resources>
    <string name="page1_name">pre_assment</string>
    <string name="testText1">testTextOwO</string>
    <string name="testbtn">BtnOwO</string>
    <string name="assmentp1">ทำแบบทดสอบ</string>
    <string name="assmentp2">แบบทดสอบที่ 1 :</string>
    <string name="resultoftest">ผลการทำแบบทดสอบ</string>
    <string name="res101morespace">สรุปผล :\nคุณมีความเสี่ยงต่อ Burnout \n\n\n\n\n</string>
    <string name="res101">\nคุณทำแบบทดสอบ\nเสร็จสิ้น \n\n</string>
    <string name="res101old">\nสรุปผล :\nคุณมีความเสี่ยงต่อ Burnout \n\n</string>
    <string name="lowriskresult">ขอบคุณที่ทำแบบทดสอบ</string>
    <string name="hightriskrusult">กรุณาทำแบบทดสอบที่ 2</string>
    <string name="lowriskresultold">ต่ำ</string>
    <string name="hightriskrusultold">สูง</string>
    <string name="btngonextpage">ถัดไป</string>
    <string name="nextassment">ทำแบบทดสอบที่ 2</string>
    <string name="nextassment2222">ทำแบบทดสอบที่ 2\nทำแบบทดสอบที่ 2\nทำแบบทดสอบที่ 2</string>
    <string name="markicon">*</string>
    <string name="btngenCode">Default Code</string>
    <string name="colum1">Name</string>
    <string name="colum2">Burnout Level</string>




    <string name="assmentp2_2">แบบทดสอบที่ 2 :</string>
    <string name="assmentp3">ประเมิน Burnout</string>
    <string name="backtomenu">ย้อนกลับ</string>
    <string name="yesbtn">ใช่</string>
    <string name="nobtn">ไม่ใช่</string>
    <string name="submitbtn">ส่งแบบทดสอบ</string>
    <string name="preasspage">เลือกแบบทดสอบ</string>
    <integer name="choice1">1</integer>
    <integer name="choice2">2</integer>
    <integer name="choice3">3</integer>
    <integer name="choice4">4</integer>
    <integer name="choice5">5</integer>


    //Common
    <string name="app_name">BurningUpp</string>
    <string name="app_logo">โลโก้แอปพลิเคชัน</string>

    //Login
    <string name="login_title">เข้าสู่ระบบ</string>
    <string name="email_hint">อีเมล</string>
    <string name="password_hint">รหัสผ่าน</string>
    <string name="sign_in_button">ลงชื่อเข้าใช้</string>
    <string name="sign_up_button">สร้างบัญชี</string>

    //Welcome
    <string name="welcome_text">ยินดีต้อนรับสู่\nBurnout Self-Check</string>
    <string name="start">เริ่มต้น</string>

    //Register
    <string name="register_title">ลงทะเบียนผู้ใช้งานใหม่</string>
    <string name="name_hint">ชื่อ</string>
    <string name="age_hint">อายุ</string>
    <string name="year_unit">ปี</string>
    <string name="gender">เพศ</string>
    <string name="male">ชาย</string>
    <string name="female">หญิง</string>
    <string name="other_gender">อื่นๆ</string>
    <string name="sleep_time">เวลานอนเฉลี่ย</string>
    <string name="sleep_1_3">1-3 ชม.</string>
    <string name="sleep_4_6">4-6 ชม.</string>
    <string name="sleep_8_10">8-10 ชม.</string>
    <string name="sleep_over_12">&gt;12 ชม.</string>
    <string name="exercise">ออกกำลังกาย</string>
    <string name="exercise_0">0 ครั้ง/สัปดาห์</string>
    <string name="exercise_1_2">1-2 ครั้ง/สัปดาห์</string>
    <string name="exercise_3_4">3-4 ครั้ง/สัปดาห์</string>
    <string name="exercise_more">&gt;4 ครั้ง/สัปดาห์</string>
    <string name="stress_level">ระดับความเครียด</string>
    <string name="create_account_button">สร้างบัญชี</string>
    <string name="already_have_account">มีบัญชีแล้ว? เข้าสู่ระบบ</string>

    // MainMenu
    <string name="menu_label">เมนูหลัก</string>
    <string name="burnout_level_test_button">แบบทดสอบ</string>
    <string name="mood_tracker_add_button">บันทึกอารมณ์</string>
    <string name="mood_calendar_button">ปฏิทินอารมณ์</string>
    <string name="profile_button">ปุ่มโปรไฟล์</string>
    <string name="moodtracklabel">ติดตามอารมณ์</string>
    <string name="moodtracker_datelabel">วันที่</string>
    <string name="moodtracker_choosedate">เลือกวันที่</string>
    <string name="moodtracker_mood">อารมณ์</string>
    <string name="moodtracker_verybad">แย่มาก</string>
    <string name="moodtracker_bad">แย่</string>
    <string name="moodtracker_normal">เฉยๆ</string>
    <string name="moodtracker_good">ดี</string>
    <string name="moodtracker_verygood">ดีมาก</string>
    <string name="moodtracker_activitylabel">กิจกรรม</string>
    <string name="moodtracker_activitywrite">วันนี้คุณทำอะไรไปบ้าง</string>
    <string name="moodtracker_notes">บันทึกช่วยจำ</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="forward"><![CDATA[>]]></string>
    <string name="birthday_hint_register">กรุณาเลือกวันเกิด</string>
    <string name="register_as">ลงทะเบียนเป็น</string>
    <string name="team_manager">ผู้จัดการทีม</string>
    <string name="team_member">สมาชิกทีม</string>
    <string name="team_name">ชื่อทีม</string>
</resources>