<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".BasicTestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/btnbacktomenuicon"
            style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/mainblue"
            android:contentDescription="@string/backtomenu"
            android:fontFamily="sans-serif"
            android:text="@string/assmentp2"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:icon="@drawable/btnbackicon"
            app:iconGravity="start"
            app:iconSize="40dp"
            app:iconTint="@color/white" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:contentDescription="@string/assmentp2"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/question_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <Button
            android:id="@+id/btn_submit"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/mainblue"
            android:fontFamily="sans-serif"
            android:text="@string/submitbtn"
            android:textColor="@color/white"
            android:textScaleX="1.15"
            android:visibility="gone"
            android:textSize="34sp"
            android:textStyle="bold"
            app:cornerRadius="20dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>